# bipscript

./: .gitignore  ATTRIBUTION  CMakeLists.txt  Doxyfile  README.md  audioengine.cpp  audioengine.h  audioport.cpp  drumtabreader.h  event.h  eventbuffer.h  eventconnection.h  eventlist.h  listable.h  lv2plugin.cpp  main.cpp  midievent.cpp  midiinputbuffer.cpp  midiinputbuffer.h  midiport.h  midisink.cpp  midisink.h  mixer.cpp  mixer.h  objectcache.h  position.cpp  random.h  scripthost.cpp  scripthost.h  stereoport.cpp  transportmaster.cpp
abcmidi/: parseabc.c  parseabc.h  store.c  stresspat.c
api/: Audio.yaml  Exp.yaml  IO.yaml  Lv2.yaml  Math.yaml  Midi.yaml  Osc.yaml  System.yaml  Time.yaml  Transport.yaml  generate.rb
api/apigen/: README.md  apigen.rb  bind.sh  bindings.h.rb  bindpackage.cpp.rb  bindpackage.h.rb  bindtypes.cpp.rb  bindtypes.h.rb
bindings/: bindaudio.cpp  bindaudio.h  bindcommon.cpp  bindcommon.h  bindexp.cpp  bindexp.h  bindings.h  bindio.cpp  bindio.h  bindlv2.cpp  bindlv2.h  bindmath.cpp  bindmath.h  bindmidi.cpp  bindmidi.h  bindosc.cpp  bindosc.h  bindsystem.cpp  bindsystem.h  bindtime.cpp  bindtime.h  bindtransport.cpp  bindtransport.h  bindtypes.cpp  bindtypes.h
btrack/: BTrack.cpp
src/: abcreader.cpp  abcreader.h  audioconnection.h  audioengine.cpp  audioengine.h  audioport.cpp  audioport.h  beattracker.cpp  beattracker.h  chordreader.cpp  chordreader.h  drumtabreader.cpp  drumtabreader.h  event.h  eventbuffer.cpp  eventbuffer.h  eventclosure.h  eventlist.h  extension.cpp  extension.h  io.cpp  io.h  listable.h  lv2plugin.cpp  lv2plugin.h  main.cpp  memorypool.h  methodqueue.cpp  methodqueue.h  midiconnection.h  midievent.cpp  midievent.h  midiinputbuffer.cpp  midiinputbuffer.h  midimessage.h  midipackage.h  midipattern.cpp  midipattern.h  midiport.cpp  midiport.h  (+39 more)
